<resources>
    <string name="app_name">Techno Basque</string>
    <string name="app_title">Techno Basque</string>
    <string name="app_subtitle">Komertzialentzako plataforma korporatiboa</string>
    <string name="login_title">Komertzialen sarbidea</string>
    <string name="erabiltzailea">Erabiltzailea</string>
    <string name="pasahitza">Pasahitza</string>
    <string name="saioa_hasi">Saioa hasi</string>
    <string name="datuak_kargatu">Datuak kargatu</string>
    <string name="xml_kargatuta">XML datuak datu-basean kargatu dira.</string>
    <string name="xml_sinkronizatuta">Datuak sinkronizatu dira (txertatuak, eguneratutakoak eta ezabatutakoak).</string>
    <string name="datuak_ondo_eguneratu">Datuak ondo eguneratu dira. Informazio zaharra berrituta dago.</string>
    <string name="errorea_fitxategia_irakurtzean">Errorea fitxategia irakurtzean.</string>
    <string name="xml_errorea">Errorea XML kargatzean: %1$s</string>
    <string name="hautatu_xml">Hautatu XML</string>
    <string name="btn_load_xml">Kargatu XML fitxategiak</string>
    <string name="xml_hautatu_titulua">Hautatu XML fitxategia (assets)</string>
    <string name="xml_utzi">Utzi</string>
    <string name="xml_kargatu">Kargatu</string>
    <string name="xml_guztiak_kargatu">Guztiak inportatu (orden egokian)</string>
    <string name="xml_ezin_inportatu">Fitxategi mota hau ezin da inportatu</string>
    <string name="xml_falta_da">xml-a \'%1$s\' falta da</string>
    <string name="btn_select_commercial">Hautatu komertziala zerrendatik</string>
    <string name="btn_select_bazkidea">Hautatu bazkidea zerrendatik</string>
    <string name="btn_sartu_komertzial_gisa">Sartu komertzial gisa (kredentzialik gabe)</string>
    <string name="komertzial_hautatu_titulua">Hautatu komertziala</string>
    <string name="komertzial_zerrenda_hutsa">Komertzialik ez. Kargatu «Kargatu XML fitxategiak» eta hautatu komertzialak.xml lehenik.</string>
    <string name="btn_sartu_bazkide_gisa">Sartu bazkide gisa (kredentzialik gabe)</string>
    <string name="bazkide_hautatu_titulua">Hautatu bazkidea</string>
    <string name="bazkide_zerrenda_hutsa">Bazkiderik ez. Kargatu «Kargatu XML fitxategiak» eta hautatu bazkideak.xml lehenik.</string>
    <string name="show_password">Erakutsi pasahitza</string>
    <string name="hide_password">Ezkutatu pasahitza</string>
    <string name="error_user_required">Erabiltzailea beharrezkoa da</string>
    <string name="error_password_required">Pasahitza beharrezkoa da</string>
    <string name="login_success">Saioa hasita!</string>
    <string name="login_error_erabiltzaile_pasahitz">Erabiltzailea edo pasahitza ez da zuzena. Kargatu loginak.xml (eta komertzialak.xml) lehenik.</string>
    <string name="saioa_ez_dago_hasita">Saioa ez dago hasita. Mesedez, saioa hasi lehenik.</string>
    <string name="zita_ezabatu_errorea">Errorea zita ezabatzean. Ez duzu sarbiderik edo zita ez da existitzen.</string>
    <string name="hasiera_ongietorri">Ongi etorri</string>
    <string name="ongietorri">Ongi etorri, %1$s</string>
    <string name="esportatu_izenburua">Esportatu XML</string>
    <string name="esportazio_guztiak_izenburua">Esportazioak (XML + TXT)</string>
    <string name="agenda_esportazioak_hasieran">Agendako esportazioak (XML eta TXT) Hasiera fitxan daude, «Esportazioak» atalean.</string>
    <string name="esportatu_atala_egunero">Egunero</string>
    <string name="esportatu_atala_astero">Astero</string>
    <string name="esportatu_atala_hilero">Hilero</string>
    <string name="esportatu_atala_beste_aukerak">Beste aukera batzuk</string>
    <string name="sesioa_itxi">Sesioa itxi</string>
    <string name="esportatu_gordeta_lekua">Gordeta: %1$s</string>
    <string name="esportatu_gordeta_lekua_etiqueta">Esportazioak hemen gordetzen dira:</string>
    <string name="btn_esportatu_komertzialak">Komertzialak (komertzialak.xml)</string>
    <string name="btn_komertzialak_kudeatu">Komertzialak kudeatu (zerrenda eta ezabatu)</string>
    <string name="komertzialak_kudeatu_titulua">Komertzialak (datu-basea)</string>
    <string name="komertzial_ezabatu_baieztatu">Komertzial hau datu-basean ezabatu nahi duzu?</string>
    <string name="komertzial_ondo_ezabatuta">Komertziala datu-basean ezabatu da.</string>
    <string name="komertzialak_zerrenda_hutsa_kudeatu">Komertzialik ez datu-basean. Kargatu komertzialak.xml lehenik.</string>
    <string name="komertzialak_kudeatu_oharra">Luze-sakatu komertzial bat ezabatzeko. Aldaketa datu-basean gordetzen da.</string>
    <string name="komertzial_ezabatu_errorea">Ezin izan da komertziala ezabatu datu-basean (erreferentziak ditu agian).</string>
    <string name="komertzial_berria">Komertzial berria</string>
    <string name="komertzial_editatu">Komertziala editatu</string>
    <string name="komertzial_gorde">Gorde</string>
    <string name="komertzial_gorde_baieztatu">Seguru zaude gorde nahi duzula?</string>
    <string name="komertzial_errorea_izena_beharrezkoa">Izena beharrezkoa da.</string>
    <string name="komertzial_errorea_kodea_beharrezkoa">Kodea beharrezkoa da.</string>
    <string name="komertzial_ondo_gordeta">Komertziala ondo gorde da.</string>
    <string name="komertzial_guztiak_ezabatu">Guztiak ezabatu</string>
    <string name="komertzial_guztiak_ezabatu_baieztatu">Komertzial GUZTIAK datu-basean ezabatu nahi dituzu? Ekintza hau ezin da desegin.</string>
    <string name="komertzial_guztiak_ondo_ezabatuta">Komertzial guztiak datu-basean ezabatu dira.</string>
    <string name="komertzial_guztiak_ezabatu_errorea">Errorea komertzial guztiak ezabatzean.</string>
    <string name="fab_komertzial_berria">Komertzial berria</string>
    <string name="cd_komertziala_gehitu">Komertzial berria gehitu</string>
    <string name="btn_esportatu_bazkide_berriak">Bazkide berriak (bazkide_berriak.xml)</string>
    <string name="btn_esportatu_bazkideak">Bazkideak (bazkideak.xml)</string>
    <string name="btn_esportatu_eskaera_berriak">Eskaera berriak / Bidalketak (eskaera_berriak.xml)</string>
    <string name="btn_esportatu_agenda_xml">Esportatu XML (Ofiziala)</string>
    <string name="btn_esportatu_agenda_txt">Esportatu TXT (Kopia)</string>
    <string name="esportatu_agenda_ondo">Agenda esportatuta. Postaz bidali dezakezu.</string>
    <string name="btn_esportatu_katalogoa">Katalogoa esportatu (katalogoa.xml)</string>
    <string name="btn_katalogoa_eguneratu">Katalogoa eguneratu (astero)</string>
    <string name="esportatu_ondo">XML barne-memorian gordeta.</string>
    <string name="katalogoa_eguneratu_ondo">Katalogoa eguneratuta.</string>
    <string name="katalogoa_ondo_berritu_datu_zaharrak">Katalogoa ondo berritu da. Datu zaharrak ezabatu dira.</string>
    <string name="irudirik_gabe">Irudirik gabe</string>
    <string name="esportatu_errorea">Errorea esportatzean: %1$s</string>
    <string name="esportatu_errorea_batzuetan">Errorea gertatu da.</string>
    <string name="btn_inportatu_gailutik">Inportatu gailutik (XML)</string>
    <string name="inportatu_ondo">XML inportatuta.</string>
    <string name="inportatu_errorea">Errorea inportatzean: %1$s</string>
    <string name="inportatu_fitxategi_ezin_irakurri">Ezin da fitxategia irakurri.</string>
    <string name="postaz_gaia_komertzialak">Komertzialak - komertzialak.xml</string>
    <string name="postaz_gaia_bazkide_berriak">Bazkide berriak - bazkide_berriak.xml</string>
    <string name="postaz_gaia_bazkideak">Bazkideak - bazkideak.xml</string>
    <string name="postaz_gaia_eskaera_berriak">Eskaera berriak / Bidalketak - eskaera_berriak.xml</string>
    <string name="postaz_gaia_agenda_xml">Agenda (ofiziala) - agenda.xml</string>
    <string name="postaz_gaia_agenda_txt">Agenda (kopia) - agenda.txt</string>
    <string name="postaz_gaia_katalogoa">Katalogoa - katalogoa.xml</string>
    <string name="postaz_hautatu">Bidali postaz (Gmail edo beste)</string>
    <string name="postaz_fitxategi_ez">Fitxategia ez da aurkitu.</string>
    <string name="postaz_errorea">Errorea postaz bidaltzean: %1$s</string>
    <string name="nav_hasiera">Hasiera</string>
    <string name="nav_agenda">Agenda</string>
    <string name="nav_erabiltzaileak">Erabiltzaileak</string>
    <string name="nav_bazkideak">Bazkideak</string>
    <string name="nav_inbentarioa">Inbentarioa</string>
    <string name="erabiltzaileak_izenburua">Erabiltzaileak</string>
    <string name="tab_bazkideak">Bazkideak</string>
    <string name="tab_komertzialak">Komertzialak</string>
    <string name="contact_title">Gipuzkoa egoitza</string>
    <string name="button_map">Mapa ikusi</string>
    <string name="button_call">Deia aktibatu</string>
    <string name="button_email">Emaila bidali</string>
    <string name="deia_errorea">Ezin izan da deia ireki.</string>
    <string name="posta_errorea">Ezin izan da posta bezeroa ireki.</string>
    <string name="contact_address">Gran Via kalea 1, Donostia</string>
    <string name="contact_phone">Tel: 943 123 456</string>
    <string name="contact_email">technobasque@gmail.com</string>
    <string name="agenda_izenburua">Agenda</string>
    <string name="btn_ikusi">Ikusi</string>
    <string name="btn_editatu">Editatu</string>
    <string name="btn_ezabatu">Ezabatu</string>
    <string name="zita_ezabatu_baieztatu">Zita hau ezabatu nahi duzu?</string>
    <string name="zita_ezabatu_ondo">Zita ezabatuta.</string>
    <string name="zita_editatu_titulua">Zita editatu</string>
    <string name="zita_ikusi_izenburua">Zitaren xehetasunak</string>
    <string name="agenda_zitak_hutsa">Zitik ez. Gehitu bat «Zita berria» botoiarekin.</string>
    <string name="cd_agenda_gehitu_zita">Zita berria gehitu</string>
    <string name="fab_zita_berria">Zita berria</string>
    <string name="zita_gehitu_titulua">Zita berria</string>
    <string name="zita_zenbakia">Zenbakia</string>
    <string name="zita_data">Data (uuuu-hh-ee)</string>
    <string name="zita_ordua">Ordua</string>
    <string name="zita_data_icon_cd">Data hautatzeko kalendarioa</string>
    <string name="zita_ordua_icon_cd">Ordua hautatzeko erlojua</string>
    <string name="data_hautatu">Data hautatu</string>
    <string name="ordua_hautatu">Ordua hautatu</string>
    <string name="zita_ordezkaritza">Ordezkaritza</string>
    <string name="zita_gorde">Gorde</string>
    <string name="zita_utzi">Utzi</string>
    <string name="zita_ondo_gordeta">Zita gordeta.</string>
    <string name="zita_errorea_zenbakia">Zenbakia beharrezkoa da.</string>
    <string name="zita_errorea_data">Data beharrezkoa da (uuuu-hh-ee).</string>
    <string name="agenda_modulua_izenburua">Agenda (bisitak)</string>
    <string name="agenda_modulua_zerrenda_hutsa">Bisitarik ez. Gehitu bat «Bisita berria» botoiarekin.</string>
    <string name="agenda_modulua_bisita_berria">Bisita berria</string>
    <string name="bilatu_bisitak">Bilatu (bazkidea, data, deskribapena, egoera...)</string>
    <string name="agenda_bisita_data">Bisitaren data</string>
    <string name="agenda_bisita_bazkidea">Bazkidea</string>
    <string name="agenda_bisita_deskribapena">Deskribapena</string>
    <string name="agenda_bisita_egoera">Egoera</string>
    <string name="komertziala">Komertziala</string>
    <string name="egoera_egina">Egina</string>
    <string name="egoera_zain">Zain</string>
    <string name="egoera_deuseztatua">Deuseztatua</string>
    <string name="bisita_ezabatu_baieztatu">Bisita hau ezabatu nahi duzu?</string>
    <string name="bisita_ezabatu_ondo">Bisita ezabatuta.</string>
    <string name="btn_erosi">Erosi</string>
    <string name="saskia_izenburua">Erosketa saskia</string>
    <string name="saskia_garbitu">Saskia garbitu</string>
    <string name="saskia_itxi">Itxi</string>
    <string name="saskia_guztira_etiketa">Guztira:</string>
    <string name="cd_logo">Techno Basque logoa</string>
    <string name="cd_user_icon">Erabiltzailea ikonoa</string>
    <string name="cd_password_icon">Pasahitza ikonoa</string>
</resources>